--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
     <meta name="apple-mobile-web-app-title" content="%REACT_APP_TITLE%">
     <meta property="og:title" content="%REACT_APP_TITLE%">
     <meta property="og:image" content="%PUBLIC_URL%/apple-splash-1136-640.jpg">
+    <script type="text/javascript" src="//mlb.valuecommerce.com/mylinkbox.js" async=""></script>
 
     <!--
       manifest.json provides metadata used when your web app is installed on a
